<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickHAC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_close">Closed</string>
    <string name="drawer_open">Open</string>
    <string name="color_stripe">Stripe of color</string>
    <string name="card_title">Card Title</string>
    <string name="card_desc">Card description</string>
    <string name="card_overflow">Overflow</string>
    <string name="action_refresh">Refresh grades</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_id">Student ID</string>
    <string name="action_signout">Sign out</string>
    <string name="assignment">ASSIGNMENT</string>
    <string name="cycle1">Cycle 1</string>
    <string name="cycle2">Cycle 2</string>
    <string name="cycle3">Cycle 3</string>
    <string name="cycle4">Cycle 4</string>
    <string name="cycle5">Cycle 5</string>
    <string name="cycle6">Cycle 6</string>
    <string name="exam1">Exam 1</string>
    <string name="exam2">Exam 2</string>
    <string name="average">Average</string>
    <string name="semester1">Semester 1</string>
    <string name="semester2">Semester 2</string>
    <string name="action_about">About</string>
    <string name="pref_category_GPA">GPA</string>
    <string name="pref_showGPA">Show GPA</string>
    <string name="pref_showGPA_summ">Display GPA on overview page</string>
    <string name="pref_chooseWeighted">Choose weighted classes</string>
    <string name="pref_chooseExcluded">Choose excluded weighted classes</string>
    <string name="action_addStudent">Add student</string>
    <string name="action_jumpCycle">Go to cycle</string>
    <string name="action_cycleright">Next cycle</string>
    <string name="action_cycleleft">Previous cycle</string>
    <string name="showcase_navigation">See Your Classes</string>
    <string name="showcase_navigation_description">Tap or swipe from the left edge to see all your classes.</string>
    <string name="showcase_student">View Students</string>
    <string name="showcase_student_description">You can add students and switch between them.</string>
    <string name="showcase_cycle">Switch Between Cycles</string>
    <string name="showcase_cycle_description">Use the buttons or swipe left and right to switch between cycles.</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_showNotifications">Show notifications</string>
    <string name="action_overview">Overview</string>
    <string name="pref_showNotifications_summ">Notify me when my grade changes in a class</string>
    <string name="pref_category_grades">Grades</string>
    <string name="pref_showGradeColor">Color grades by their value</string>
    <string name="pref_showGradeColor_summ">The darker the color, the worse the grade</string>
    <string name="dialog_signout_title">Sign out</string>
    <string name="dialog_signout_message">Are you sure you want to sign out?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_login">Login</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_login_message">Use your GradeSpeed credentials.</string>
    <string name="left_sign">&lt;</string>
    <string name="right_sign">&gt;</string>
    <string name="grade">GRADE</string>
    <string name="white">#FFFFFF</string>
    <string name="turquoise">#1ABC9C</string>
    <string name="green_sea">#16A085</string>
    <string name="emerald">#2ECC71</string>
    <string name="nephritis">#27AE60</string>
    <string name="petermann_river">#3498DB</string>
    <string name="belize_hole">#2980B9</string>
    <string name="amethyst">#9B59B6</string>
    <string name="wisteria">#8E44AD</string>
    <string name="wet_asphalt">#34495E</string>
    <string name="midnight_blue">#2C3E50</string>
    <string name="sun_flower">#F1C40F</string>
    <string name="orange">#F39C12</string>
    <string name="carrot">#E67E22</string>
    <string name="pumpkin">#D35400</string>
    <string name="alizarin">#E74C3C</string>
    <string name="pomegranate">#C0392B</string>
    <string name="clouds">#ECF0F1</string>
    <string name="silver">#BDC3C7</string>
    <string name="concrete">#95A5A6</string>
    <string name="asbestos">#7F8C8D</string>
    <string name="pref_showNotificationsLowGrade">Notify when grades drop</string>
    <string name="pref_showNotificationsLowGrade_summ">Send me a notification when my grades drop below</string>

</resources>