<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_addStudent"
        android:showAsAction="never"
        android:title="@string/action_addStudent"/>
    <item
        android:id="@+id/action_signout"
        android:showAsAction="never"
        android:title="@string/action_signout"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>